fix graph heading and heading size

--- a/Views/Home/Jira.cshtml
+++ b/Views/Home/Jira.cshtml
@@ -36,7 +36,7 @@
                                 title:
                                 {
                                     display: true,
-                                    text: "ProductWise Sales Count"
+                                    text: "Tasks Completed for Projects Last 4 Weeks (Projects with more than 10 new tasks added excluding CLSD)"
                                 },
                                 responsive: true,
                                 maintainAspectRatio: true
@@ -47,7 +47,7 @@
 </head>
 
 
-<h1>Project Tasks (Completed and Current Backlog)</h1>
+<h2>Project Tasks (Completed and Current Backlog)</h2>
 <div style="text-align: center">
     <canvas id="barcanvas"></canvas>
 </div>
