--- a/Views/Home/Jira.cshtml
+++ b/Views/Home/Jira.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Jira";
 }
+
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
     <script type="text/javascript">
@@ -44,64 +45,142 @@
                     });
             }
     </script>
+    <style>
+           summary::-webkit-details-marker 
+           {
+                display: none;
+           }
+    </style>
 </head>
 
+<div style="float: left; width:680px">
+    <h2>Project Tasks (Completed and Current Backlog)</h2>
+    <div style="text-align: center; width:680px">
+        <canvas id="barcanvas"></canvas>
+    </div>
+    <table class="table-bordered">
+        <tr>
+            <th rowspan="2" style="vertical-align:middle;text-align:center;background-color:#DDEBF7; width:250px">Project</th>
+            <th colspan="2" style="vertical-align:middle;text-align:center;background-color:#9BC2E6">Last 4 Weeks</th>
+            <th colspan="3" style="vertical-align:middle;text-align:center;background-color:#ACB9CA">Last 12 Months</th>
+        </tr>
+        <tr>
+            <th style="background-color:#DDEBF7; width:80px">New Tasks Created</th>
+            <th style="background-color:#DDEBF7">Completed</th>
+            <th style="background-color:#D6DCE4">Tasks Created</th>
+            <th style="background-color:#D6DCE4">Completed</th>
+            <th style="background-color:#D6DCE4">Backlog</th>
+        </tr>
+        @foreach (var item in Model.TasksCreatedAndCompletedThisPeriodAndYTD)
+    {
+        <tr>
+            <td style="width:250px">@Html.DisplayTextFor(modelItem => item.Project)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedThisMonth)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.Completed)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedYTD)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCompletedYTD)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.Backlog)</td>
+        </tr>
+    }
+        <tr style="background-color:#DDEBF7;style=" width:250px"">
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Project)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCreatedThisMonth)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Completed)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCreatedYTD)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCompletedYTD)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Backlog)</th>
+        </tr>
+    </table>
+</div>
 
-<h2>Project Tasks (Completed and Current Backlog)</h2>
-<div style="text-align: center">
-    <canvas id="barcanvas"></canvas>
+
+<div style="float: left;">
+    <h2>Resource Engagement On Projects (Based on Logged Hours - Last 4 weeks)</h2>
+
+        <div style="width:460px;float: left;">
+            <table class="table-responsive">
+                <tr>
+                    <th style="background-color:#DDEBF7; width:250px">Project</th>
+                    <th style="background-color:#DDEBF7; width:80px">Resources</th>
+                    <th style="background-color:#DDEBF7; width:110px">Total Logged Hours(Month)</th>
+                </tr>
+            </table>
+            @foreach (var item in Model.LoggedHoursByProject)
+    {
+            <details>
+                <summary>
+                    <table class="table-bordered">
+                        <tr>
+                            <td style="width:250px">+@Html.DisplayTextFor(modelItem => item[0][0].Project)</td>
+                            <td style="width:80px">@Html.DisplayTextFor(modelItem => item[1].Count)</td>
+                            <td style="width:110px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursMonth)</td>
+                        </tr>
+                    </table>
+                </summary>
+                <table class="table-responsive">
+                    @foreach (var i in item[1])
+            {
+                    <tr>
+                        <td style="width:250px">@Html.DisplayTextFor(modelItem => i.Resource)</td>
+                        <td style="width:80px">1</td>
+                        <td style="width:110px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursMonth)</td>
+                    </tr>
+            }
+                </table>
+            </details>
+    }
+        </div>
+
+
+        <div style="width:760px; float: left;">
+            <table class="table-responsive">
+                <tr>
+                    <th style="background-color:#DDEBF7; width:200px">Resources</th>
+                    <th style="background-color:#DDEBF7; width:60px">Project</th>
+                    <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week1)</th>
+                    <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week2)</th>
+                    <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week3)</th>
+                    <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week4)</th>
+                    <th style="background-color:#DDEBF7; width:100px">Total Logged Hrs(Month)</th>
+                </tr>
+            </table>
+            @foreach (var item in Model.LoggedHoursByResource)
+    {
+            <details>
+                <summary>
+                    <table class="table-bordered">
+                        <tr>
+                            <td style="width:200px">+@Html.DisplayTextFor(modelItem => item[0][0].Resource)</td>
+                            <td style="width:60px">@Html.DisplayTextFor(modelItem => item[1].Count)</td>
+                            <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek1)</td>
+                            <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek2)</td>
+                            <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek3)</td>
+                            <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek4)</td>
+                            <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursMonth)</td>
+                        </tr>
+                    </table>
+                </summary>
+                <table class="table-responsive">
+                    @foreach (var i in item[1])
+            {
+                    <tr>
+                        <td style="width:200px">@Html.DisplayTextFor(modelItem => i.Project)</td>
+                        <td style="width:60px">1</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek1)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek2)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek3)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek4)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursMonth)</td>
+                    </tr>
+            }
+                </table>
+            </details>
+    }
+        </div>
+
 </div>
 
 
 
-<table class="table">
-    <tr>
-        <th rowspan="2" style="vertical-align:middle;text-align:center;background-color:#DDEBF7">Project</th>
-        <th colspan="2" style="vertical-align:middle;text-align:center;background-color:#9BC2E6">Last 4 Weeks</th>
-        <th colspan="3" style="vertical-align:middle;text-align:center;background-color:#ACB9CA">Last 12 Months</th>
-    </tr>
-    <tr>
-        <th style="background-color:#DDEBF7">New Tasks Created</th>
-        <th style="background-color:#DDEBF7">Completed</th>
-        <th style="background-color:#D6DCE4">Tasks Created</th>
-        <th style="background-color:#D6DCE4">Completed</th>
-        <th style="background-color:#D6DCE4">Backlog</th>
-    </tr>
-    @foreach (var item in Model.TasksCreatedAndCompletedThisPeriodAndYTD)
-    {
-    <tr>
-        <td>@Html.DisplayTextFor(modelItem => item.Project)</td>
-        <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedThisMonth)</td>
-        <td>@Html.DisplayTextFor(modelItem => item.Completed)</td>
-        <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedYTD)</td>
-        <td>@Html.DisplayTextFor(modelItem => item.TasksCompletedYTD)</td>
-        <td>@Html.DisplayTextFor(modelItem => item.Backlog)</td>
-    </tr>
-    }
-    <tr style="background-color:#DDEBF7">
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.Project)</th>
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.TasksCreatedThisMonth)</th>
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.Completed)</th>
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.TasksCreatedYTD)</th>
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.TasksCompletedYTD)</th>
-        <th>@Html.DisplayTextFor(modelItem => Model.TotalCount.Backlog)</th>
-    </tr>
-    <!--
-        @foreach (var item in Model.MoreThan10)
-    {
-        <tr>
-            <th>@Html.DisplayTextFor(modelItem => item.Project)</th>
-            <th>@Html.DisplayTextFor(modelItem => item.TasksCreatedThisMonth)</th>
-            <th>@Html.DisplayTextFor(modelItem => item.Completed)</th>
-            <th>@Html.DisplayTextFor(modelItem => item.TasksCreatedYTD)</th>
-            <th>@Html.DisplayTextFor(modelItem => item.TasksCompletedYTD)</th>
-            <th>@Html.DisplayTextFor(modelItem => item.Backlog)</th>
-        </tr>
-    }
-    -->
 
-</table>
-<!--
-    <h1>Logged hours by project</h1>
-    <h1>Logged hours by resource</h1>
--->
+
