--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,318 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@model JiraDashboard.Models.JiraDBContext
+
+
+    <head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript">
+
+        var barChartData = {
+              labels: @Json.Serialize(Model.GraphLabel),
+              datasets: [
+                {
+                  label: "Last 4 weeks",
+                  backgroundColor: "#5B9BD5",
+                  borderWidth: 1,
+                  data: @Json.Serialize(Model.GraphMonthlyTask)
+                },
+                {
+                  label: "Last 12 Months",
+                  backgroundColor: "#A5A5A5",
+                  borderWidth: 1,
+                  data: @Json.Serialize(Model.GraphYTDTask)
+                }
+              ]
+            };
+
+            window.onload = function () {
+                var ctx1 = document.getElementById("barcanvas").getContext("2d");
+                window.myBar = new Chart(ctx1,
+                    {
+                        type: 'bar',
+                        data: barChartData,
+                        options:
+                            {
+                                title:
+                                {
+                                    display: true,
+                                    text: "Tasks Completed for Projects Last 4 Weeks (Projects with more than 20 new tasks added excluding CLSD)"
+                                },
+                                responsive: true,
+                                maintainAspectRatio: true
+                            }
+                    });
+            }
+        </script>
+        <style>
+            summary::-webkit-details-marker {
+                display: none;
+            }
+        </style>
+    </head>
+<!--project tasks graph and table-->
+<div style="float: left; width:680px; margin-left:10px">
+    <h2>Project Tasks (Completed and Current Backlog)</h2>
+    <div style="text-align: center; width:680px">
+        <canvas id="barcanvas"></canvas>
+    </div>
+
+    <table class="table-bordered">
+        <tr>
+            <th rowspan="2" style="vertical-align:middle;text-align:center;background-color:#DDEBF7; width:250px">Project</th>
+            <th colspan="2" style="vertical-align:middle;text-align:center;background-color:#9BC2E6">Last 4 Weeks</th>
+            <th colspan="3" style="vertical-align:middle;text-align:center;background-color:#ACB9CA">Last 12 Months</th>
+        </tr>
+        <tr>
+            <th style="background-color:#DDEBF7; width:80px">New Tasks Created</th>
+            <th style="background-color:#DDEBF7">Completed</th>
+            <th style="background-color:#D6DCE4">Tasks Created</th>
+            <th style="background-color:#D6DCE4">Completed</th>
+            <th style="background-color:#D6DCE4">Backlog</th>
+        </tr>
+        @foreach (var item in Model.TasksCreatedAndCompletedThisPeriodAndYTD)
+        {
+        <tr>
+            <td>@Html.DisplayTextFor(modelItem => item.Project)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedThisMonth)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.Completed)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCreatedYTD)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.TasksCompletedYTD)</td>
+            <td>@Html.DisplayTextFor(modelItem => item.Backlog)</td>
+        </tr>
+        }
+        <tr style="background-color:#DDEBF7;style=width:250px">
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Project)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCreatedThisMonth)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Completed)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCreatedYTD)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.TasksCompletedYTD)</th>
+            <th>@Html.DisplayTextFor(modelItem => Model.TotalCountProjectTasks.Backlog)</th>
+        </tr>
+    </table>
+    <div style="height:100px">&nbsp;</div>
 </div>
+
+<!--engagement by resources and by project-->
+<div style="float: left;">
+    <h2>Resource Engagement On Projects (Based on Logged Hours - Last 4 weeks)</h2>
+
+    <div style="width:440px;float: left;">
+        <table class="table-responsive">
+            <tr>
+                <th style="background-color:#DDEBF7; width:250px">
+                    Project
+                    <button id="projectFilterButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#projectFilter">
+                        +
+                    </button>
+                </th>
+                <th style="background-color:#DDEBF7; width:80px">Resources</th>
+                <th style="background-color:#DDEBF7; width:110px">Total Logged Hours(Month)</th>
+            </tr>
+        </table>
+        @foreach (var item in Model.LoggedHoursByProjectDisplay)
+        {
+        <details>
+            <summary>
+                <table class="table-active">
+                    <tr>
+                        <td style="width:250px">+@Html.DisplayTextFor(modelItem => item[0][0].Project)</td>
+                        <td style="width:80px">@Html.DisplayTextFor(modelItem => item[1].Count)</td>
+                        <td style="width:110px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursMonth)</td>
+                    </tr>
+                </table>
+            </summary>
+            <table class="table-responsive">
+                @foreach (var i in item[1])
+                    {
+                <tr>
+                    <td style="width:250px">@Html.DisplayTextFor(modelItem => i.Resource)</td>
+                    <td style="width:80px">1</td>
+                    <td style="width:110px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursMonth)</td>
+                </tr>
+                    }
+            </table>
+        </details>
+        }
+    </div>
+
+
+
+
+    <div style="width:760px; float: left; margin-left:10px">
+        <table class="table-responsive">
+            <tr>
+                <th style="background-color:#DDEBF7; width:200px">
+                    Resources
+                    <button id="resourceFilterButton" type="button" class="btn btn-primary" data-toggle="modal" data-target="#resourceFilter">
+                        +
+                    </button>
+                </th>
+                <th style="background-color:#DDEBF7; width:60px">Project</th>
+                <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week1)</th>
+                <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week2)</th>
+                <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week3)</th>
+                <th style="background-color:#DDEBF7; width:100px">Total Hrs(Week4)</th>
+                <th style="background-color:#DDEBF7; width:100px">Total Logged Hrs(Month)</th>
+            </tr>
+        </table>
+        @foreach (var item in Model.LoggedHoursByResourceDisplay)
+        {
+        <details>
+            <summary>
+                <table class="table-active">
+                    <tr>
+                        <td style="width:200px">+@Html.DisplayTextFor(modelItem => item[0][0].Resource)</td>
+                        <td style="width:60px">@Html.DisplayTextFor(modelItem => item[1].Count)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek1)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek2)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek3)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursWeek4)</td>
+                        <td style="width:100px">@Html.DisplayTextFor(modelItem => item[0][0].TotalLoggedHoursMonth)</td>
+                    </tr>
+                </table>
+            </summary>
+            <table class="table-responsive">
+                @foreach (var i in item[1])
+                    {
+                <tr>
+                    <td style="width:200px">@Html.DisplayTextFor(modelItem => i.Project)</td>
+                    <td style="width:60px">1</td>
+                    <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek1)</td>
+                    <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek2)</td>
+                    <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek3)</td>
+                    <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursWeek4)</td>
+                    <td style="width:100px">@Html.DisplayTextFor(modelItem => i.TotalLoggedHoursMonth)</td>
+                </tr>
+                    }
+            </table>
+        </details>
+        }
+    </div>
+</div>
+
+
+<!--resource filter-->
+
+<div class="modal fade" id="resourceFilter" tabindex="-1" role="dialog" aria-labelledby="resourceFilterLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="resourceFilterLabel" style="height: 0px;">Resource Filter</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <input id="resource_select_all" type="checkbox">
+                <label>(select all)</label>
+                @foreach (var item in Model.LoggedHoursByResource)
+                {
+            <div>
+                <input class="resource_checkbox" type="checkbox">
+                <label>@Html.DisplayTextFor(modelItem => item[0][0].Resource)</label>
+            </div>
+                }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--project filter-->
+
+<form class="modal fade" method="post" id="projectFilter" tabindex="-1" role="dialog" aria-labelledby="projectFilterLabel" aria-hidden="true">
+    <input type="hidden" name="paul" id="paul" value="1234145" />
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="projectFilterLabel" style="height: 0px;">Project Filter</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <label>
+                    <input id="project_select_all" type="checkbox">
+                    (select all)
+                </label>
+                <br />
+                @foreach (var item in Model.LoggedHoursByProject)
+                {
+                <label>
+                    <input class="project_checkbox" type="checkbox" value="@item[0][0].Project" name="project">
+                    @Html.DisplayTextFor(modelItem => item[0][0].Project)
+                </label>
+                <br />
+                }
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button class="btn btn-primary" form="projectFilter">Save changes</button>
+            </div>
+        </div>
+    </div>
+</form>
+
+<script>
+    $(document).ready(function(){
+        $('#resource_select_all').on('click', function () {
+            if(this.checked){
+                $('.resource_checkbox').each(function(){
+                    this.checked = true;
+                });
+            }else{
+                 $('.resource_checkbox').each(function(){
+                    this.checked = false;
+                });
+            }
+        });
+    
+        $('.resource_checkbox').on('click',function(){
+            if($('.resource_checkbox:checked').length == $('.resource_checkbox').length){
+                $('#resource_select_all').prop('checked',true);
+            }else{
+                $('#resource_select_all').prop('checked',false);
+            }
+        });
+
+        $('#project_select_all').on('click', function () {
+            if(this.checked){
+                $('.project_checkbox').each(function(){
+                    this.checked = true;
+                });
+            }else{
+                 $('.project_checkbox').each(function(){
+                    this.checked = false;
+                });
+            }
+        });
+    
+        $('.project_checkbox').on('click',function(){
+            if($('.checkbox:checked').length == $('.project_checkbox').length){
+                $('#project_select_all').prop('checked',true);
+            }else{
+                $('#project_select_all').prop('checked',false);
+            }
+        });
+
+        $('#projectFilterButton').on('click', function () {
+            $('.project_checkbox').each(function(){
+                    this.checked = false;
+            });
+            $('#project_select_all').prop('checked', false);
+        });
+
+        $('#resourceFilterButton').on('click', function () {
+            $('.resource_checkbox').each(function(){
+                    this.checked = false;
+            });
+            $('#resource_select_all').prop('checked', false);
+        });
+    });
+</script>
