--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,9 +31,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!--
+                            <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Jira">Jira</a>
-                        </li>
+                            </li>
+                        -->
                     </ul>
                 </div>
             </div>
@@ -45,12 +47,14 @@
             @RenderBody()
         </main>
     </div>
-
+    <!--
+        
+    -->
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2019 - JiraDashboard
             <!--
-                 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
             -->
         </div>
     </footer>
