--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -168,27 +168,27 @@
         </table>
         @foreach (var item in Model.LoggedHoursByProjectDisplay)
         {
-        <details>
-            <summary>
-                <table class="table-active">
-                    <tr>
-                        <td style="width:250px">+@item[0][0].Project</td>
-                        <td style="width:80px">@item[1].Count</td>
-                        <td style="width:110px">@item[0][0].TotalLoggedHoursMonth</td>
-                    </tr>
-                </table>
-            </summary>
-            <table class="table-responsive">
-                @foreach (var i in item[1])
+            <details>
+                <summary>
+                    <table class="table-active">
+                        <tr>
+                            <td style="width:250px">+@item[0][0].Project</td>
+                            <td style="width:80px">@item[1].Count</td>
+                            <td style="width:110px">@item[0][0].TotalLoggedHoursMonth</td>
+                        </tr>
+                    </table>
+                </summary>
+                <table class="table-responsive">
+                    @foreach (var i in item[1])
                     {
-                <tr>
-                    <td style="width:250px">@i.Resource</td>
-                    <td style="width:80px">1</td>
-                    <td style="width:110px">@i.TotalLoggedHoursMonth</td>
-                </tr>
+                        <tr>
+                            <td style="width:250px">@i.Resource</td>
+                            <td style="width:80px">1</td>
+                            <td style="width:110px">@i.TotalLoggedHoursMonth</td>
+                        </tr>
                     }
-            </table>
-        </details>
+                </table>
+            </details>
         }
         <table class="table-responsive">
             <tr>
@@ -197,6 +197,7 @@
                 <th style="background-color:#DDEBF7; width:110px">@Model.EngagementByProjectTotal[1]</th>
             </tr>
         </table>
+        <div style="height:100px">&nbsp;</div>
     </div>
 
 
@@ -221,35 +222,35 @@
         </table>
         @foreach (var item in Model.LoggedHoursByResourceDisplay)
         {
-        <details>
-            <summary>
-                <table class="table-active">
-                    <tr>
-                        <td style="width:200px">+@item[0][0].Resource</td>
-                        <td style="width:60px">@item[1].Count</td>
-                        <td style="width:100px">@item[0][0].TotalLoggedHoursWeek1</td>
-                        <td style="width:100px">@item[0][0].TotalLoggedHoursWeek2</td>
-                        <td style="width:100px">@item[0][0].TotalLoggedHoursWeek3</td>
-                        <td style="width:100px">@item[0][0].TotalLoggedHoursWeek4</td>
-                        <td style="width:100px">@item[0][0].TotalLoggedHoursMonth</td>
-                    </tr>
-                </table>
-            </summary>
-            <table class="table-responsive">
-                @foreach (var i in item[1])
+            <details>
+                <summary>
+                    <table class="table-active">
+                        <tr>
+                            <td style="width:200px">+@item[0][0].Resource</td>
+                            <td style="width:60px">@item[1].Count</td>
+                            <td style="width:100px">@item[0][0].TotalLoggedHoursWeek1</td>
+                            <td style="width:100px">@item[0][0].TotalLoggedHoursWeek2</td>
+                            <td style="width:100px">@item[0][0].TotalLoggedHoursWeek3</td>
+                            <td style="width:100px">@item[0][0].TotalLoggedHoursWeek4</td>
+                            <td style="width:100px">@item[0][0].TotalLoggedHoursMonth</td>
+                        </tr>
+                    </table>
+                </summary>
+                <table class="table-responsive">
+                    @foreach (var i in item[1])
                     {
-                <tr>
-                    <td style="width:200px">@i.Project</td>
-                    <td style="width:60px">1</td>
-                    <td style="width:100px">@i.TotalLoggedHoursWeek1</td>
-                    <td style="width:100px">@i.TotalLoggedHoursWeek2</td>
-                    <td style="width:100px">@i.TotalLoggedHoursWeek3</td>
-                    <td style="width:100px">@i.TotalLoggedHoursWeek4</td>
-                    <td style="width:100px">@i.TotalLoggedHoursMonth</td>
-                </tr>
+                        <tr>
+                            <td style="width:200px">@i.Project</td>
+                            <td style="width:60px">1</td>
+                            <td style="width:100px">@i.TotalLoggedHoursWeek1</td>
+                            <td style="width:100px">@i.TotalLoggedHoursWeek2</td>
+                            <td style="width:100px">@i.TotalLoggedHoursWeek3</td>
+                            <td style="width:100px">@i.TotalLoggedHoursWeek4</td>
+                            <td style="width:100px">@i.TotalLoggedHoursMonth</td>
+                        </tr>
                     }
-            </table>
-        </details>
+                </table>
+            </details>
         }
 
         <table class="table-responsive">
@@ -263,6 +264,7 @@
                 <th style="background-color:#DDEBF7; width:100px">@Model.EngagementByResourceTotal[5]</th>
             </tr>
         </table>
+        <div style="height:100px">&nbsp;</div>
     </div>
 </div>
 
